<resources>
    <string name="app_name">Kentem</string>
    <string name="text_label_1">Home</string>
    <string name="text_label_2">Buscar</string>
    <string name="text_label_3">Anúncios</string>
    <string name="text_label_4">Mensagens</string>
    <string name="text_label_5">Perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_announcement"><b>Paulo</b> quer comprar\n por até <b>R$ 1500,00</b></string>
</resources>
