<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_page"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/text_label_1"/>

    <item
        android:id="@+id/search_page"
        android:enabled="true"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/text_label_2"/>

    <item
        android:id="@+id/my_ad_page"
        android:enabled="true"
        android:icon="@drawable/ic_announcement_black_24dp"
        android:title="@string/text_label_3"/>

    <item
        android:id="@+id/message_page"
        android:enabled="true"
        android:icon="@drawable/ic_message_black_24dp"
        android:title="@string/text_label_4"/>

    <item
        android:id="@+id/my_account_page"
        android:enabled="true"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/text_label_5"/>


</menu>